# hackvm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
fun/: Cargo.toml
fun/src/: ast.rs  compiler.rs  fun.pest  lib.rs  parser.rs
hackc/: Cargo.toml
hackc/examples/funcode/OS/: Memory.fun  Sys.fun  tsconfig.json
hackc/examples/funcode/memtest/: Main.fun  tsconfig.json
hackc/examples/funcode/minimal/: Sys.fun  Sys.vm
hackc/examples/funcode/usingos/: Main.fun  Main.vm  tsconfig.json  types.ts
hackc/examples/vmcode/arithmetic/: add.vm
hackc/examples/vmcode/functions/: functions.vm
hackc/examples/vmcode/labels/: loop.vm
hackc/examples/vmcode/pointers/: pointers.vm
hackc/examples/vmcode/screen/: Sys.vm
hackc/runtime/: debug.cpp  main.c  main.cpp
hackc/src/: codegen.rs  main.rs
hackvm/: Cargo.toml  README.md
hackvm/benches/: my_benchmark.rs
hackvm/src/: lib.rs  vmcommand.rs  vmemulator.rs  vmparser.rs
web/: README.md  bun.lockb  index.html  package.json  vite.config.ts
web/public/: index.html  manifest.json
web/src/: App.test.tsx  App.tsx  HackEmulator.tsx  IconButton.tsx  RemoteFS.ts  RustHackMachine.ts  demos.ts  safeInterval.ts  useHackMachine.ts
web/src/pages/: about.tsx  emulator.tsx
