[package]
name = "hackc"
version = "0.1.0"
authors = ["Paul Carduner <paul@carduner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hackvm = { path = "../hackvm" }
fun = { path = "../fun" }
clap = "2.33.3"
anyhow = "1.0"

[dev-dependencies]
serial_test = "*"